# views-r2darts2

./: .gitignore  CONTEXT_HANDOVER.md  FORTRESS_ROADMAP.md  README.md  REPRODUCIBILITY_MANIFEST.md  debug_columns.py  post_mortem_report.md  pyproject.toml  sweep_configs_description.md
docs/: ADR_COMPLIANCE_REPORT.md
reports/: technical_risk_register.md
specs/: loss_function_tuning_guide.md
sweep_configs/: asymmetric_quantile_a_sweep.py  asymmetric_quantile_b_sweep.py  asymmetric_quantile_c_sweep.py  asymmetric_quantile_loss.py  asymmetric_quantile_sweep_custom_01.py  l1.py  lr_finder_sweep.py  mse.py  poisson_nll.py  shrinkage.py  shrinkage_a_sweep.py  shrinkage_b_sweep.py  shrinkage_c_sweep.py  shrinkage_e_sweep.py  shrinkage_f_sweep.py  shrinkage_log1p_test_sweep.py  spike_focal_loss.py  spikefocal_a_sweep.py  spikefocal_b_sweep.py  spikefocal_c_sweep.py  spikefocal_sweep_custom_01.py  template_sweep.py  time_aware_weighted_huber.py  timeaware_weighted_huber_a_sweep.py  timeaware_weighted_huber_b_sweep.py  timeaware_weighted_huber_c_sweep.py  timeaware_weighted_huber_e_sweep.py  timeaware_weighted_huber_f_sweep.py  tweedie.py  tweedie_a_sweep.py  tweedie_b_sweep.py  tweedie_c_sweep.py  tweedie_e_sweep.py  tweedie_f_sweep.py  tweedie_focused_grid_sweep.py  tweedie_lr_finder_sweep.py  tweedie_nlinear_test_sweep.py  verify_quantile_sweep.py  verify_shrinkage_sweep.py  weight_decay_ablation_sweep.py  (+19 more)
tests/: conftest.py  prove_parameter_passing.py  test_asymmetric_quantile_loss.py  test_catalog.py  test_darts_forecasting_model_manager.py  test_falsification_merge_ready_development.py  test_forecaster.py  test_forecaster_log_features.py  test_fortress_hardening.py  test_genomic_handshake.py  test_l1_loss.py  test_loss.py  test_loss_pipeline_robustness.py  test_mc_dropout_entropy_lock.py  test_model.py  test_model_catalog.py  (+15 more)
(+233 files in other folders)
