[tool.poetry]
name = "views-r2darts2"
version = "0.1.0"
description = ""
authors = [
    { name = "Dylan Pinheiro", email = "dylpin@prio.org" },
    { name = "Xiaolong Sun", email = "xiaolong.sun@pcr.uu.se" },
    { name = "Borbála Farkas", email = "borbala.farkas@pcr.uu.se" },
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "views-pipeline-core (>=1.1.1,<2.0.0)",
    "darts (==0.35.0)",
    "pytorch-lightning-bolts (>=0.3.2.post1)",
    "lightning-bolts (>=0.7.0)",
]

[tool.poetry]
packages = [{include = "views_r2darts2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
